ingress-auth-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
  labels:
    app: demo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-backend
  template:
    metadata:
      labels:
        app: demo-backend
    spec:
      containers:
        - name: demo-backend
          image: traefik/whoami:v1.10.3
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-backend
  labels:
    app: demo-backend
spec:
  type: ClusterIP
  selector:
    app: demo-backend
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/auth-url: "http://nginx-auth.default.svc.cluster.local/auth"
    # nginx.ingress.kubernetes.io/auth-method: "GET"
    # nginx.ingress.kubernetes.io/auth-send-body: "false"
    # nginx.ingress.kubernetes.io/auth-response-headers: "X-Gray-Env"

    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   auth_request_set $canary_flag $upstream_http_x_gray_env;
    #   proxy_set_header X-Gray-Env $canary_flag;
   
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-backend
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend-canary
  labels:
    app: demo-backend-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-backend-canary
  template:
    metadata:
      labels:
        app: demo-backend-canary
    spec:
      containers:
        - name: demo-backend
          image: traefik/whoami:v1.10.3
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-backend-canary
  labels:
    app: demo-backend-canary
spec:
  type: ClusterIP
  selector:
    app: demo-backend-canary
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-backend-canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Gray-Env"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
    # nginx.ingress.kubernetes.io/auth-url: "http://nginx-auth.default.svc.cluster.local/auth"
    # nginx.ingress.kubernetes.io/auth-method: "GET"
    # nginx.ingress.kubernetes.io/auth-send-body: "false"
    # nginx.ingress.kubernetes.io/auth-response-headers: "X-Gray-Env"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   auth_request_set $canary_flag $upstream_http_x_gray_env;
    #   proxy_set_header X-Gray-Env $canary_flag;
   
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-backend-canary
                port:
                  number: 80
